2000-07-18 10:25 UTC+0200 JfL <jfl@mafact.com> & RaC <Rac@mafact.com>
   * source/vm/classes.c
     * Improvement within hb_clsinst (no more static var)
     * Improvement within hb_clsinst, hb_getdata(), hb_setdata()
       Not more indirect pointer ref. by its long value ...
     * Unreleased block resolved
     * One function added to improve class(y) compatibility with mess. :Error
       tObject:Error(cDesc,cClass,cMsg,nCode)
       +HB_FUNC( TOBJECT_ER )
   * include\HBEXTERN.CH
     +added  TOBJECT_ER
   * source\rtl\TObject.prg
     Improving Class(y) compatibility
     + Added :Error(...)  message
     + added :MsgNotFound() automatically called when one msg is not found

2000-07-16-20:30 GMT -3  Luiz Rafael Culik <culik@sl.conex.net>

*contrib/hbzlib/hbzip.h
     +Added declartration to hb___GetFilesNamesFromZip()
*contrib/hbzlib/zipfile2.c
       +Implementation of hb___GetFilesNamesFromZip()
*contrib/hbzlib/zipfile1.c
        +HB_GETFILESINZIP() function ( return the content of a files file in an array
         % All functons optimized to Speed and Size

2000-07-16 19:00 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbapi.h
    *source/vm/hvm.c
    *source/vm/memvars.c
        * memvars table is deleted in two steps: first clear all
        public and private variables (without the detached variables)
        and next free space allocated for memvars table. These two steps
        are separated with the garbage collector call so self
        referencing variables will be deallocated properly.

2000-07-16 17:40 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbhash.h
    *source/common/hash.c
        * added ulCount and ulUsed members of HB_HASH_TABLE structure
        * added hb_hashTableResize() function

    *source/compiler/hbident.c
        *increased the hash table

    *source/vm/garbage.c
    *source/vm/hvm.c
        * all detached variables are scanned now correctly