@@ -2963,9 +2963,8 @@ static BOOL OpenInclude( char * szFileName, PATHNAMES * pSearch, PHB_FNAME pMain
      pFile->szFileName = (char*) hb_xgrab( strlen( szFileName ) + 1 );
      hb_pp_strocpy( pFile->szFileName, szFileName );
 
-     /*
      hb_comp_files.pLast->iLine = hb_comp_iLine;
-     */
+     hb_comp_iLine = 1;
 
      pFile->iLine = 1;
      pFile->pPrev = hb_comp_files.pLast;
